--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: hello-world-service
 spec:
   selector:
-    app: nginx
+    app: hello-world
   ports:
     - protocol: TCP
       port: 80
